[gd_scene load_steps=8 format=3 uid="uid://bp2klddudgkav"]

[ext_resource type="Script" path="res://butterfly.gd" id="1_nh8t4"]
[ext_resource type="Script" path="res://detecting_area.gd" id="2_5n5p3"]
[ext_resource type="Texture2D" uid="uid://cd7r2d34yoi1c" path="res://assets/pictures/butterfly.png" id="3_o6t3i"]
[ext_resource type="Script" path="res://hurtbox.gd" id="4_3ncwx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vbe1y"]
radius = 169.145

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82vyn"]
size = Vector2(38, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_xnl4x"]
radius = 48.0521

[node name="butterfly" type="CharacterBody2D"]
script = ExtResource("1_nh8t4")

[node name="DetectingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource("2_5n5p3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingArea"]
shape = SubResource("CircleShape2D_vbe1y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_o6t3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11, 5)
shape = SubResource("RectangleShape2D_82vyn")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("4_3ncwx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_xnl4x")

[node name="DetectingTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="target_entered" from="DetectingArea" to="." method="enemy_detected"]
[connection signal="target_lost" from="DetectingArea" to="." method="enemy_lost"]
[connection signal="hurt" from="HurtBox" to="." method="hurt"]
[connection signal="timeout" from="DetectingTimer" to="." method="adjust"]
